--- a/theme/marketshop1/include/header.phtml
+++ b/theme/marketshop1/include/header.phtml
@@ -58,7 +58,7 @@
 						</div>
 						-->
 						</li>
-						<li><a href="checkout.html"><%=a("Checkout")%></a></li>
+						<li><a href="<%=g_secure_url%>checkout.phtml"><%=a("Checkout")%></a></li>
 					</ul>
 				</div>
 				<%
