--- a/util/xt_func_string.phtml
+++ b/util/xt_func_string.phtml
@@ -179,6 +179,12 @@ Function TranslateX(string, strTypeId, strEntityId, strFieldId)
 	' Product (2)
 	' 1: name, 2: description, 3: detail
 	'=======================================================================
+	' Filter Attribute (20)
+	' 1: name
+	'=======================================================================
+	' Filter Attribute Option (21)
+	' 1: name
+	'=======================================================================
 	xstring = string
 	
 	current_view_id = "4"
