--- a/admin/design_cms.phtml
+++ b/admin/design_cms.phtml
@@ -53,6 +53,7 @@
 														<i class="fa fa-plus"></i>
 														<span class="hidden-xs"> New Page </span>
 													</a>
+													<!--
 													<div class="btn-group">
 														<a class="btn btn-circle btn-default dropdown-toggle" href="javascript:;" data-toggle="dropdown">
 															<i class="fa fa-share"></i>
@@ -75,42 +76,105 @@
 															</li>
 														</div>
 													</div>
+													-->
 												</div>
 											</div>
 											<div class="portlet-body">
 												<div class="table-container">
+													<div class="table-actions-wrapper">
+														<span> </span>
+														<select class="table-group-action-input form-control input-inline input-small input-sm">
+															<option value="">Select...</option>
+															<option value="Enabled">Enable</option>
+															<option value="Disabled">Disable</option>
+															<option value="">---------------------------------</option>
+															<option value="Delete">Delete</option>
+														</select>
+														<button class="btn btn-sm btn-success table-group-action-submit">
+															<i class="fa fa-check"></i> Submit</button>
+													</div>
 													<table class="table table-striped table-bordered table-hover table-checkable" id="design_cms_1">
 														<thead>
-														<tr>
-															<th>Page ID</th>
-															<th>Title</th>
-															<th>Date Created</th>
-															<th>
-															Last Modified
-															<%
-																  SELECT CASE Session("STORETIMEZONE")
-																  CASE "0"
-																	  Response.Write("(PST)")
-																  CASE "1"
-																	  Response.Write("(MST)")
-																  CASE "2"
-																	  Response.Write("(CST)")
-																  CASE "3"
-																	  Response.Write("(EST)")
-																  CASE ELSE
-																	  Response.Write("(PST)")
-																  END SELECT
-															  %>
-															</th>
-															<th width="2%" nowrap>Page Size</th>
-															<th width="2%">Preview</th>
-														</tr>
-														
+															<tr role="row" class="heading">
+																<th width="1%">
+																	<label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
+																		<input type="checkbox" class="group-checkable" data-set="#sample_2 .checkboxes" />
+																		<span></span>
+																	</label>
+																</th>
+																<th width="8%"> ID </th>
+																<th width="100"> Title </th>
+																<th width="100"> URL Key </th>
+																<th width="12%"> Date Created </th>
+																<th width="12%"> Date Modified </th>
+																<th width="10%"> Status </th>
+																<th width="5%"> Actions </th>
+															</tr>
+															<tr role="row" class="filter">
+																<td> </td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="page_id"> 
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="page_title"> 
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="page_url_key"> 
+																</td>
+																<td>
+																	<div class="input-group date date-picker margin-bottom-5" data-date-format="mm/dd/yyyy">
+																		<input type="text" class="form-control form-filter input-sm" readonly name="page_date_created_from" placeholder="From">
+																		<span class="input-group-btn">
+																			<button class="btn btn-sm default" type="button">
+																				<i class="fa fa-calendar"></i>
+																			</button>
+																		</span>
+																	</div>
+																	<div class="input-group date date-picker" data-date-format="mm/dd/yyyy">
+																		<input type="text" class="form-control form-filter input-sm" readonly name="page_date_created_to" placeholder="To">
+																		<span class="input-group-btn">
+																			<button class="btn btn-sm default" type="button">
+																				<i class="fa fa-calendar"></i>
+																			</button>
+																		</span>
+																	</div>
+																</td>
+																<td>
+																	<div class="input-group date date-picker margin-bottom-5" data-date-format="mm/dd/yyyy">
+																		<input type="text" class="form-control form-filter input-sm" readonly name="page_date_updated_from" placeholder="From">
+																		<span class="input-group-btn">
+																			<button class="btn btn-sm default" type="button">
+																				<i class="fa fa-calendar"></i>
+																			</button>
+																		</span>
+																	</div>
+																	<div class="input-group date date-picker" data-date-format="mm/dd/yyyy">
+																		<input type="text" class="form-control form-filter input-sm" readonly name="page_date_updated_to" placeholder="To">
+																		<span class="input-group-btn">
+																			<button class="btn btn-sm default" type="button">
+																				<i class="fa fa-calendar"></i>
+																			</button>
+																		</span>
+																	</div>
+																</td>
+																<td>
+																	<select name="page_status" class="form-control form-filter input-sm">
+																		<option value="">Select...</option>
+																		<option value="1">Enabled</option>
+																		<option value="2">Disabled</option>
+																	</select>
+																</td>
+																<td>
+																	<div class="margin-bottom-5">
+																		<button class="btn btn-sm btn-success filter-submit margin-bottom">
+																			<i class="fa fa-search"></i> Search</button>
+																	</div>
+																	<button class="btn btn-sm btn-default filter-cancel">
+																		<i class="fa fa-times"></i> Reset</button>
+																</td>
+															</tr>
 														</thead>
 														<tbody>
-															<tr>
-																<td colspan="11" class="dataTables_empty">Loading data from server</td>
-															</tr>
 														</tbody>
 													</table>
 												</div>
@@ -148,7 +212,6 @@
 
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script type="text/javascript">
-		
 var oTable;
 var v1 = "All";
 var v2 = "All";
@@ -160,110 +223,93 @@ var TableData = function () {
 	//which will add advanced interaction controls to any HTML table
 	//For more information, please visit https://datatables.net/
 	var runDataTable = function () {
-		oTable = $('#design_cms_1').dataTable({
-			"bProcessing": true,
-			"bStateSave": false,
-			"bJQueryUI": false,
-			"iDisplayLength": 20,
-			"bServerSide": true,
-			"bAutoWidth": false,
-			"sAjaxSource": "api/sp_cms.phtml",
-			"aoColumns": [ 
-				/* Page ID */  { "sClass": "center" },
-				/* Page Title */  { "sClass": "left" },
-				/* Created Date */  { "sClass": "center" },
-				/* Last Updated */ { "sClass": "center" },
-				/* Page Size */ { "sClass": "center" },
-				/* Preview */ { "sClass": "center","bSortable": false }
-			  ],
-			  
-			"aaSorting": [[0, 'desc']],
-			"aLengthMenu": [
-				[10, 20, 30, 40, 50, 100],
-				[10, 20, 30, 40, 50, 100] // change per page values here
-			],
-			
-			"oLanguage": {
-				"sLengthMenu": "Show _MENU_ Rows",
-				"sSearch": "",
-				"sProcessing": '<img src="assets/images/ajax-loader-primary.gif"/>',
-				"oPaginate": {
-					"sPrevious": "",
-					"sNext": ""
-				}
-			},
-			
-			'fnServerData' : function ( sSource, aoData, fnCallback ) {
-				aoData.push( { 'name' : 'min', 'value' : $("#min").val() } );
-				aoData.push( { 'name' : 'max', 'value' : $("#max").val() } );
-				$.ajax({
-					'dataType' : 'json',
-					'data' : aoData,
-					'type' : 'GET',
-					'url' : sSource,
-					'success' : fnCallback
-				});
-			} 
-		});
-		
-		$('#sample_1').on( 'draw.dt', function () {
-			//UIModals.init();
-			var $modal = $('#ajax-modal');
-			$('.ajax .demo').on('click', function () {
-				// create the backdrop and wait for next modal to be triggered
-				$('body').modalmanager('loading');
-				modal_po_id = $(this).data('id');
-				setTimeout(function () {
-					$modal.load('modal_ajax_po_email.phtml?po_id=' + modal_po_id, '', function () {
-						$modal.modal();
-					});
-				}, 1000);
-			});
-		} );
-		
-	};
 
+        var grid = new Datatable();
+
+        grid.init({
+            src: $("#design_cms_1"),
+            onSuccess: function (grid, response) {
+                // grid:        grid object
+                // response:    json object of server side ajax response
+                // execute some code after table records loaded
+            },
+            onError: function (grid) {
+                // execute some code on network or other general error  
+            },
+            onDataLoad: function(grid) {
+                // execute some code on ajax data load
+            },
+            loadingMessage: 'Loading...',
+            dataTable: { // here you can define a typical datatable settings from http://datatables.net/usage/options 
+
+                // Uncomment below line("dom" parameter) to fix the dropdown overflow issue in the datatable cells. The default datatable layout
+                // setup uses scrollable div(table-scrollable) with overflow:auto to enable vertical scroll(see: assets/global/scripts/datatable.js). 
+                // So when dropdowns used the scrollable div should be removed. 
+                //"dom": "<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'<'table-group-actions pull-right'>>r>t<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'>>",
+                columnDefs: [ 
+					{ orderable: false, targets: [0,7] },
+					{ className: "text-center", targets: [6] }
+				],
+					
+                "bStateSave": true, // save datatable state(pagination, sort, etc) in cookie.
+
+                "lengthMenu": [
+                    [10, 20, 50, 100, 150, -1],
+                    [10, 20, 50, 100, 150, "All"] // change per page values here
+                ],
+                "pageLength": 20, // default record count per page
+                "ajax": {
+                    "url": "api/sp_cms.phtml", // ajax source
+                },
+                "order": [
+                    [1, "asc"]
+                ]// set first column as a default sort by asc
+            }
+        });
+
+        // handle group actionsubmit button click
+        grid.getTableWrapper().on('click', '.table-group-action-submit', function (e) {
+            e.preventDefault();
+            var action = $(".table-group-action-input", grid.getTableWrapper());
+            if (action.val() != "" && grid.getSelectedRowsCount() > 0) {
+                grid.setAjaxParam("customActionType", "group_action");
+                grid.setAjaxParam("customActionName", action.val());
+                grid.setAjaxParam("id", grid.getSelectedRows());
+                grid.getDataTable().ajax.reload();
+                grid.clearAjaxParams();
+            } else if (action.val() == "") {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'Please select an action',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            } else if (grid.getSelectedRowsCount() === 0) {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'No record selected',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            }
+        });
+		
+        //grid.setAjaxParam("customActionType", "group_action");
+        //grid.getDataTable().ajax.reload();
+        //grid.clearAjaxParams();
+    };
+	
 	return {
 		//main function to initiate template pages
 		init: function () {
 			runDataTable();
-		},
-		
-		reload: function(theURL) {
-			if ( theURL ) {
-				oTable.fnReloadAjax(theURL);
-			}
-			else {
-				oTable.fnReloadAjax('sp_cms.phtml?v1=&v2=&z1=');
-			}
 		}
 	};
 }();
 
-function StatusFilter (theObj)
-{
-	oTable.fnReloadAjax('api/sp_cms.phtml?v1=&v2=' + theObj.value + '&z1=');
-}
-function DateFilter()
-{
-	oTable.fnReloadAjax('api/sp_cms.phtml?v1=&v2=<%=cms_filter%>&DF=' + document.getElementById('DateRange').value + '&z1=');
-}
-
-$('#daterange').on('apply.daterangepicker', function(ev, picker) { 
-	oTable.fnReloadAjax('api/sp_cms.phtml?v1=&v2=<%=cms_filter%>&DF=' + document.getElementById('DateRange').value + '&z1=');
-	//do something, like clearing an input
- $('#daterange').val(''); 
-}); 
-function DeletePages()
-{
-	if(confirm("You are about to delete these pages.  Do you want to continue?"))
-		document.pageDelete.submit();
-	else
-		return false;
-}
-
 </script>
-
 <script>
 	jQuery(document).ready(function() {
 		TableData.init();
