--- a/admin/sales_purchase_order.phtml
+++ b/admin/sales_purchase_order.phtml
@@ -1,3 +1,7 @@
+<%
+	Response.CodePage = 65001
+	Response.CharSet = "UTF-8"
+%>
 <!-- #INCLUDE File="local/local.phtml" -->
 <!-- #INCLUDE File="util/xt_func_util.phtml" -->
 <!-- #INCLUDE File="util/xt_func_string.phtml" -->
@@ -6,6 +10,9 @@
 <head>
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
+<link href="../assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />
 <!-- END PAGE LEVEL PLUGINS -->
 </head>
 
@@ -24,24 +31,177 @@
 				<div class="page-content-wrapper">
 					<!-- BEGIN CONTENT BODY -->
 					<!-- BEGIN PAGE HEAD-->
-					<div class="page-head">
-						<div class="container-fluid">
-							<!-- BEGIN PAGE TITLE -->
-							<div class="page-title">
-								<h1>Dashboard
-									<small>dashboard & statistics</small>
-								</h1>
-							</div>
-							<!-- END PAGE TITLE -->
-						</div>
-					</div>
 					<!-- END PAGE HEAD-->
 					<!-- BEGIN PAGE CONTENT BODY -->
 					<div class="page-content">
 						<div class="container-fluid">
 							<!-- BEGIN PAGE CONTENT INNER -->
 							<div class="page-content-inner">
-								
+								<div class="row">
+									<div class="col-md-12">
+										<!-- Begin: Demo Datatable 1 -->
+										<div class="portlet light portlet-fit portlet-datatable ">
+											<div class="portlet-title">
+												<div class="caption">
+													<i class="icon-settings font-dark"></i>
+													<span class="caption-subject font-dark sbold uppercase">Purchase Order List</span>
+												</div>
+												<div class="actions">
+													<div class="btn-group btn-group-devided" data-toggle="buttons">
+														<!--
+														<label class="btn btn-transparent grey-salsa btn-outline btn-circle btn-sm active">
+															<input type="radio" name="options" class="toggle" id="option1">Actions</label>
+														<label class="btn btn-transparent grey-salsa btn-outline btn-circle btn-sm">
+															<input type="radio" name="options" class="toggle" id="option2">Settings</label>
+														-->
+													</div>
+													<div class="btn-group">
+														<!--
+														<a class="btn red btn-outline btn-circle" href="javascript:;" data-toggle="dropdown">
+															<i class="fa fa-share"></i>
+															<span class="hidden-xs"> Tools </span>
+															<i class="fa fa-angle-down"></i>
+														</a>
+														<ul class="dropdown-menu pull-right">
+															<li>
+																<a href="javascript:;"> Export to Excel </a>
+															</li>
+															<li>
+																<a href="javascript:;"> Export to CSV </a>
+															</li>
+															<li>
+																<a href="javascript:;"> Export to XML </a>
+															</li>
+															<li class="divider"> </li>
+															<li>
+																<a href="javascript:;"> Print Invoices </a>
+															</li>
+														</ul>
+														-->
+													</div>
+												</div>
+											</div>
+											<div class="portlet-body">
+												<div class="table-container">
+													<div class="table-actions-wrapper">
+														<span> </span>
+														<select class="table-group-action-input form-control input-inline input-small input-sm">
+															<option value="">Select...</option>
+															<option value="Print">Print</option>
+															<option value="">Change Status to ...</option>
+															<option value="Pending">..........Pending</option>
+															<option value="Approve">..........Approve by Manager</option>
+															<option value="Closed">..........Closed</option>
+															<option value="Duplicate">Duplicate</option>
+															<option value="Delete">Delete</option>
+														</select>
+														<button class="btn btn-sm green table-group-action-submit">
+															<i class="fa fa-check"></i> Submit</button>
+													</div>
+													<table class="table table-striped table-bordered table-hover table-checkable" id="datatable_po_list">
+														<thead>
+															<tr role="row" class="heading">
+																<th width="2%">
+																	<label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
+																		<input type="checkbox" class="group-checkable" data-set="#sample_2 .checkboxes" />
+																		<span></span>
+																	</label>
+																</th>
+																<th width="8%"> Quote&nbsp;# </th>
+																<th width="12%"> Date </th>
+																<th width="150"> Company </th>
+																<th width="150"> Bill To </th>
+																<th width="10%"> Amount </th>
+																<th width="10%"> Status </th>
+																<th width="10%"> Drafted By </th>
+																<th width="10%"> Description </th>
+																<th width="10%"> S.O </th>
+																<th width="10%"> Actions </th>
+															</tr>
+															<tr role="row" class="filter">
+																<td> </td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="quote_id"> </td>
+																<td>
+																	<div class="input-group date date-picker margin-bottom-5" data-date-format="mm/dd/yyyy">
+																		<input type="text" class="form-control form-filter input-sm" readonly name="quote_date_from" placeholder="From">
+																		<span class="input-group-btn">
+																			<button class="btn btn-sm default" type="button">
+																				<i class="fa fa-calendar"></i>
+																			</button>
+																		</span>
+																	</div>
+																	<div class="input-group date date-picker" data-date-format="mm/dd/yyyy">
+																		<input type="text" class="form-control form-filter input-sm" readonly name="quote_date_to" placeholder="To">
+																		<span class="input-group-btn">
+																			<button class="btn btn-sm default" type="button">
+																				<i class="fa fa-calendar"></i>
+																			</button>
+																		</span>
+																	</div>
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="quote_customer_company"> 
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="quote_customer_name"> 
+																</td>
+																<td>
+																	<div class="margin-bottom-5">
+																		<input type="text" class="form-control form-filter input-sm" name="quote_price_from" placeholder="From" /> 
+																	</div>
+																	<input type="text" class="form-control form-filter input-sm" name="quote_price_to" placeholder="To" /> 
+																</td>
+																<td>
+																	<select name="quote_status" class="form-control form-filter input-sm">
+																		<option value="">Select...</option>
+																		<option value="0" selected=""> Pending </option>
+																		<option value="2"> Approved - by Manager </option>
+																		<option value="1"> Closed</option>
+																		<option value="3"> Converted by Customer </option>
+																	</select>
+																</td>
+																<td>
+																	<select name="quote_owner" class="form-control form-filter input-sm">
+																		<option value="">Select...</option>
+																		<option value="--">admin</option>
+																		<%
+																			sql = "SELECT user_id FROM " & g_storeid & "_users ORDER BY user_id"
+																			set rs = dbconn.Execute(sql)
+																			do while not rs.EOF
+																		%>
+																		<option value="<%=rs(0)%>"> <%=rs(0)%> </option>
+																		<%
+																				rs.MoveNext
+																			loop
+																			rs.Close
+																			set rs = nothing
+																		%>
+																	</select>																	
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="quote_name"> 
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="quote_so"> 
+																</td>
+																<td>
+																	<div class="margin-bottom-5">
+																		<button class="btn btn-sm green btn-outline filter-submit margin-bottom">
+																			<i class="fa fa-search"></i> Search</button>
+																	</div>
+																	<button class="btn btn-sm red btn-outline filter-cancel">
+																		<i class="fa fa-times"></i> Reset</button>
+																</td>
+															</tr>
+														</thead>
+														<tbody> </tbody>
+													</table>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 							<!-- END PAGE CONTENT INNER -->
 						</div>
@@ -62,12 +222,126 @@
 </div>
 <!--#INCLUDE FILE="include/js.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
-
+<script src="../assets/global/scripts/datatable.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL PLUGINS -->
-
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script type="text/javascript">
+
+var oTable;
+var oTabel2;
+var v1 = "All";
+var v2 = "All";
+var v3 = "All";
 	
+var TableDatatablesAjax = function () {
+
+    var initPickers = function () {
+        //init date pickers
+        $('.date-picker').datepicker({
+            rtl: App.isRTL(),
+            autoclose: true
+        });
+    }
+
+    var handleDemo1 = function () {
+
+        var grid = new Datatable();
+
+        grid.init({
+            src: $("#datatable_po_list"),
+            onSuccess: function (grid, response) {
+                // grid:        grid object
+                // response:    json object of server side ajax response
+                // execute some code after table records loaded
+            },
+            onError: function (grid) {
+                // execute some code on network or other general error  
+            },
+            onDataLoad: function(grid) {
+                // execute some code on ajax data load
+            },
+            loadingMessage: 'Loading...',
+            dataTable: { // here you can define a typical datatable settings from http://datatables.net/usage/options 
+
+                // Uncomment below line("dom" parameter) to fix the dropdown overflow issue in the datatable cells. The default datatable layout
+                // setup uses scrollable div(table-scrollable) with overflow:auto to enable vertical scroll(see: assets/global/scripts/datatable.js). 
+                // So when dropdowns used the scrollable div should be removed. 
+                //"dom": "<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'<'table-group-actions pull-right'>>r>t<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'>>",
+                columnDefs: [ 
+					{ orderable: false, targets: [0,9] },
+					{ className: "text-center", targets: [6,7,9] },
+					{ className: "text-right", targets: [5] }
+				],
+					
+                "bStateSave": true, // save datatable state(pagination, sort, etc) in cookie.
+
+                "lengthMenu": [
+                    [10, 20, 50, 100, 150, -1],
+                    [10, 20, 50, 100, 150, "All"] // change per page values here
+                ],
+                "pageLength": 20, // default record count per page
+                "ajax": {
+                    "url": "api/sp_po_list.phtml", // ajax source
+                },
+                "order": [
+                    [1, "asc"]
+                ]// set first column as a default sort by asc
+            }
+        });
+
+        // handle group actionsubmit button click
+        grid.getTableWrapper().on('click', '.table-group-action-submit', function (e) {
+            e.preventDefault();
+            var action = $(".table-group-action-input", grid.getTableWrapper());
+            if (action.val() != "" && grid.getSelectedRowsCount() > 0) {
+                grid.setAjaxParam("customActionType", "group_action");
+                grid.setAjaxParam("customActionName", action.val());
+                grid.setAjaxParam("id", grid.getSelectedRows());
+                grid.getDataTable().ajax.reload();
+                grid.clearAjaxParams();
+            } else if (action.val() == "") {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'Please select an action',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            } else if (grid.getSelectedRowsCount() === 0) {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'No record selected',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            }
+        });
+
+        //grid.setAjaxParam("customActionType", "group_action");
+        //grid.getDataTable().ajax.reload();
+        //grid.clearAjaxParams();
+    }
+	
+    return {
+
+        //main function to initiate the module
+        init: function () {
+
+            initPickers();
+            handleDemo1();
+        }
+
+    };
+
+}();
+
+jQuery(document).ready(function() {
+    TableDatatablesAjax.init();
+});	
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
 </body>
